updating readme, gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,23 @@
-zip
-zip/*
+zip/kiwisolver-1.2.0.dist-info/
+zip/kiwisolver-1.2.0.dist-info/*
+zip/dateutil/
+zip/dateutil/*
+zip/pyparsing.py
+zip/cycler.py
+zip/six.py
+zip/pytz/
+zip/pytz/*
+zip/numpy/
+zip/numpy/*
+zip/numpy.libs/
+zip/numpy.libs/*
+zip/matplotlib/
+zip/matplotlib/*
+zip/mpl_toolkits/
+zip/mpl_toolkits/*
+zip/pandas/
+zip/pandas/*
+zip/matplotlib-3.2.2-py3.8-nspkg.pth
+zip/pylab.py
+zip/kiwisolver.cpython-38-x86_64-linux-gnu.so
 zip.zip
