--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@ zip/numpy.libs/
 zip/numpy.libs/*
 zip/matplotlib/
 zip/matplotlib/*
+zip/matplotlib.libs/
+zip/matplotlib.libs/*
 zip/mpl_toolkits/
 zip/mpl_toolkits/*
 zip/pandas/
