--- a/.gitignore
+++ b/.gitignore
@@ -23,4 +23,26 @@ zip/matplotlib-3.2.2-py3.8-nspkg.pth
 zip/pylab.py
 zip/kiwisolver.cpython-38-x86_64-linux-gnu.so
 zip.zip
+zip/zip.zip
 threatMeter.py
+zip/setuptools/
+zip/setuptools/*
+zip/numpy/
+zip/numpy/*
+zip/easy_install.py
+zip/pkg_resources/
+zip/pkg_resources/*
+zip/bin/
+zip/bin/*
+zip/zope.interface-5.1.0-py3.8-nspkg.pth
+zip/DateTime/
+zip/DateTime/*
+zip/xlrd/
+zip/xlrd/*
+zip/zope/
+zip/zope/*
+zip/xlrd-1.2.0.dist-info
+zip/xlrd-1.2.0.dist-info/*
+test_code/
+test_code
+test_code/*
